--- a/index.html
+++ b/index.html
@@ -6,36 +6,54 @@
     <title>My Resume</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #f0f2f5;
             color: #333;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
             text-align: center;
-            padding: 50px;
         }
         .container {
+            background: #ffffff;
+            border-radius: 12px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            padding: 30px;
             max-width: 600px;
-            margin: 0 auto;
-            background: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 100%;
         }
         h1 {
-            margin: 0;
             color: #3498db;
+            font-size: 2.5em;
+            margin: 0;
+            padding-bottom: 10px;
         }
         p {
-            margin: 20px 0;
+            color: #555;
+            font-size: 1.2em;
+            margin: 15px 0;
         }
         a {
-            color: #3498db;
+            display: inline-block;
+            background: #3498db;
+            color: #fff;
             text-decoration: none;
+            padding: 15px 25px;
+            border-radius: 8px;
             font-size: 1.2em;
+            transition: background-color 0.3s, transform 0.2s;
         }
         a:hover {
-            text-decoration: underline;
+            background: #2980b9;
+            transform: scale(1.05);
+        }
+        footer {
+            margin-top: 20px;
+            font-size: 0.9em;
+            color: #777;
         }
     </style>
 </head>
@@ -43,7 +61,10 @@
     <div class="container">
         <h1>My Resume</h1>
         <p>You can download my resume from the link below:</p>
-        <a href="sadikpathan.pdf" target="_blank">Download Resume</a>
+        <a href="resume.pdf" target="_blank">Download Resume</a>
+        <footer>
+            <p>&copy; 2024 Your Name</p>
+        </footer>
     </div>
 </body>
 </html>
