--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="container">
         <h1>My Resume</h1>
         <p>You can download my resume from the link below:</p>
-        <a href="resume.pdf" target="_blank">Download Resume</a>
+        <a href="sadikpathan.pdf" target="_blank">Download Resume</a>
         <footer>
             <p>&copy; 2024 Your Name</p>
         </footer>
