--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 <body>
     <div class="container">
         <h1>My Resume</h1>
-        <p>You can download my resume from the link below:</p>
-        <a href="sadikpathan.pdf" target="_blank">Download Resume</a>
-       
+        <p>You can view my resume from the link below:</p>
+        <a href="sadikpathan.pdf" target="_blank">View Resume</a>
+
     </div>
 </body>
 </html>
