--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f2f5;
+            background-color: #e0f7fa; /* Light blue background */
             color: #333;
             display: flex;
             justify-content: center;
@@ -26,7 +26,7 @@
             width: 100%;
         }
         h1 {
-            color: #3498db;
+            color: #00796b; /* Teal color for the header */
             font-size: 2.5em;
             margin: 0;
             padding-bottom: 10px;
@@ -38,7 +38,7 @@
         }
         a {
             display: inline-block;
-            background: #3498db;
+            background: #00796b; /* Teal background for the button */
             color: #fff;
             text-decoration: none;
             padding: 15px 25px;
@@ -47,7 +47,7 @@
             transition: background-color 0.3s, transform 0.2s;
         }
         a:hover {
-            background: #2980b9;
+            background: #004d40; /* Darker teal on hover */
             transform: scale(1.05);
         }
         footer {
@@ -62,7 +62,7 @@
         <h1>My Resume</h1>
         <p>You can view my resume from the link below:</p>
         <a href="sadikpathan.pdf" target="_blank">View Resume</a>
-
+      
     </div>
 </body>
 </html>
