--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #e0f7fa; /* Light blue background */
+            background-color: #f5f5f5; /* Light blue background */
             color: #333;
             display: flex;
             justify-content: center;
@@ -38,7 +38,7 @@
         }
         a {
             display: inline-block;
-            background: #00796b; /* Teal background for the button */
+            background: #2980b9; /* Teal background for the button */
             color: #fff;
             text-decoration: none;
             padding: 15px 25px;
