--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             text-align: center;
         }
         .container {
-            background: #ffffff;
+            background: #DE68C9;
             border-radius: 12px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             padding: 30px;
