--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f5f5f5; /* Light blue background */
+            background: linear-gradient(to right, #a2c2e1, #f2f9fc); /* Soft gradient background */
             color: #333;
             display: flex;
             justify-content: center;
@@ -18,7 +18,7 @@
             text-align: center;
         }
         .container {
-            background: #DE68C9;
+            background: #ffffff;
             border-radius: 12px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             padding: 30px;
@@ -26,7 +26,7 @@
             width: 100%;
         }
         h1 {
-            color: #00796b; /* Teal color for the header */
+            color: #2c3e50; /* Dark blue-gray color */
             font-size: 2.5em;
             margin: 0;
             padding-bottom: 10px;
@@ -38,7 +38,7 @@
         }
         a {
             display: inline-block;
-            background: #2980b9; /* Teal background for the button */
+            background: #3498db; /* Bright blue background */
             color: #fff;
             text-decoration: none;
             padding: 15px 25px;
@@ -47,7 +47,7 @@
             transition: background-color 0.3s, transform 0.2s;
         }
         a:hover {
-            background: #004d40; /* Darker teal on hover */
+            background: #2980b9; /* Darker blue on hover */
             transform: scale(1.05);
         }
         footer {
@@ -62,7 +62,9 @@
         <h1>My Resume</h1>
         <p>You can view my resume from the link below:</p>
         <a href="sadikpathan.pdf" target="_blank">View Resume</a>
-      
+        <footer>
+            <p>&copy; 2024 Sadik Pathan</p>
+        </footer>
     </div>
 </body>
 </html>
